# world

./: .gitignore  .goreleaser.yaml  .prettierrc.json  Cargo.toml  Dockerfile  README.md  actions.sh  analytics.sh  astro.config.mjs  cdn.sh  docker-compose.yml  fleet.toml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  run  server.sh  tailwind.config.cjs  tailwind.config.js  tsconfig.json  web.sh
.cargo/: config.toml
.fleet/: settings.json
.github/: FUNDING.yml
.github/workflows/: build.yml  clippy.yml  codeql.yml  rome.yml
analytics/: Cargo.toml  go.mod
analytics/src/: main.rs
animations/: Wavy.tsx
cdn/: '  Dockerfile  go.mod  go.sum  main.go
cdn/routes/: delete.go  files.go  folders.go  ping.go  upload.go  utils.go
cdn/src/: main.rs
github-stats/: Cargo.toml
pages/: index.tsx
prisma/: schema.prisma
server/: Cargo.toml  Dockerfile  fastly.toml
server/src/: main.rs
src/: Icons.tsx
src/components/: Lanyard.tsx  SideBar.tsx  Snowfall.tsx  TechItem.tsx
src/layouts/: Layout.astro
src/pages/: 404.astro  404.mdx  blog.astro  gear.astro  index.astro
src/pages/blog/: first-post.md
src/pages/layouts/: Layout.astro
src/utils/: time.ts
styles/: globals.css
